# fft86

./: CMakeLists.txt
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
fft86/: defs.hpp  fft.hpp  scramble.hpp  twiddles.hpp  util.hpp  vec.hpp
src/: apply_twiddles.S  fft86.cpp  fft_1d_batch_dif.S  fft_1d_batch_dit.S  fourstep.cpp  mixed.cpp  pfa.cpp  real.cpp  scramble.S  scramble.cpp  selfsort.S  transpose.S  transpose.cpp  transpose_prime.cpp  twiddles.cpp
